temp found the weird white space bug

--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -1,9 +1,8 @@
 .swiper {
     position: relative;
     display: flex;
-    width: 99vw;
+    width: 100vw;
     height: auto;
-    bottom: 50px;
 }
 .swiper-pictures {
     position: relative;
@@ -16,11 +15,5 @@
 @media screen and (max-width:550px){
     .swiper-pictures img {
         width: 100%;
-    }
-    .swiper {
-        bottom: 90px;
-        padding: 0;
-        margin: 0;
-        border: 0;
     }
 }
