--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,40 +1,40 @@
 #contact-form-container {
   position: relative;
-  display: flex;
-  margin: auto;
-  text-align: center;
-  width: 100vw;
-  height: auto;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  // text-align: center;
+  //TODO: Possible style
+  width: 100%;
+  height: 800px;
   bottom: 80px;
-  padding: 0;
   background-image: url(../../images/main-page-header1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-}
-#contact-form-container {
-  position: relative;
-  display: grid;
   grid-template-columns: 50% 40%;
-  justify-content: center;
 }
+
 .contact-icons {
   position: relative;
   margin-right: 20px;
 }
+
 #left-contact-details {
   position: relative;
   display: block;
   color: white;
-  background-color: rgb(36, 38, 41, 0.8);
-  width: 50%;
+  background-color: rgb(36, 38, 41, 0.9);
+  width: 90%;
   height: auto;
   padding: 30px;
   margin: auto;
   font-size: 24px;
+  word-wrap: wrap;
 }
 #left-contact-container h1{
   color: white;
   font-size: 38px;
+  margin-top: 0;
 }
 #left-contact-details p{
   margin-top: 30px;
@@ -60,7 +60,6 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   position: relative;
-  z-index: 3;
 }
 .inputContainer h2 {
   color: white;
@@ -116,7 +115,23 @@
   color: #fff;
 }
 
-
+@media screen and (max-width: 840px) {
+  #left-contact-details {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 680px) {
+  #contact-form-container {
+    bottom: 20px;
+    position: relative;
+    display: block;
+  }
+  #left-contact-details {
+    position: relative;
+    padding: 5px;
+    align-items: center;
+  }
+}
 @media screen and (max-width: 425px) {
   .inputContainer {
     width: 100%;
