--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -4,13 +4,16 @@
     background-image: url(../../images/wood-background.png);
     background-repeat: no-repeat;
     background-size: cover;
+    // background-color: green;
 }
+
 #logo {
     position: relative;
     display: flex;
     width: 10%;
     left: 20px;
 }
+
 #navbar-items a li {
     cursor: pointer;
 }
@@ -18,15 +21,15 @@
     position: relative;
     display: inline-block;
     margin-right: 30px;
-    margin-bottom: 5px;
-    top: 5px;
+    margin-bottom: 0;
+    top: 0;
     left: -30px;
     border: 2px;
     font-size: 16px;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 40px;
+    padding-right: 40px;
     background-color: rgba(44, 43, 43, 0.8);
     color: white;
 }
@@ -39,19 +42,14 @@
     font-size: 20px;
     width: 20%;
     text-align: center;
-    border-left: 3px solid black
+    border-left: 3px solid black;
 }
 #left-contact {
     position: relative;
     float: left;
     padding-left: 20px;
 }
-#right-contact {
-    position: relative;
-    float: right;
-    width: 50px;
-    height: 50px;
-}
+
 #contact-btn {
     color: white;
     text-decoration: none;
@@ -63,6 +61,7 @@
 #phone-icon {
     position: relative;
     top: 30px;
+    right: 40px;
 }
 
 @media screen and (max-width: 890px) {
